--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ img {
 
 .main-navigation a {
   color: #000000;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .main-navigation a:hover,
@@ -241,7 +241,7 @@ img {
   line-height: 24px;
   color: #283136;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: normal;
 }
 
 .slider-item-description .button {
@@ -530,6 +530,7 @@ input:checked + label[for=btn-3] {
 }
 
 .partners li {
+  position: relative;
   padding: 0;
   list-style: none;
 
@@ -538,6 +539,39 @@ input:checked + label[for=btn-3] {
 
 .partners li:nth-child(1) {
   padding-top: 15px;
+}
+
+.partners li:nth-child(1)::after {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 17px;
+  left: 247px;
+  height: 52px;
+  width: 2px;
+  background-color: black;
+}
+
+.partners li:nth-child(2)::after {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 16px;
+  left: 254px;
+  height: 52px;
+  width: 2px;
+  background-color: black;
+}
+
+.partners li:nth-child(3)::after {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 17px;
+  left: 240px;
+  height: 52px;
+  width: 2px;
+  background-color: black;
 }
 
 .partners li:nth-child(2) {
@@ -1105,6 +1139,7 @@ input:checked + label[for=btn-3] {
 
 .range-controls .bar {
   width: 70%;
+  margin-left: 0;
   height: 2px;
 
   background: #00ca74;
@@ -1328,8 +1363,8 @@ input[type=number]::-webkit-outer-spin-button {
   width: 960px;
   height: 590px;
   box-sizing: border-box;
-  padding-left: 100px;
-  padding-top: 70px;
+  padding-left: 98px;
+  padding-top: 67px;
   padding-right: 100px;
 
   background-color: #ffffff;
@@ -1355,12 +1390,14 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .modal .modal-field-name {
-  margin-right: 35px;
+  margin-left: 1px;
+  margin-right: 37px;
   margin-bottom: 33px;
 }
 
 .modal .modal-field-letter {
-  margin-bottom: 46px;
+  margin-bottom: 44px;
+  padding-left: 1px;
 }
 
 .modal .button {
@@ -1383,9 +1420,10 @@ input[type=number]::-webkit-outer-spin-button {
 
   color: rgba(68, 68, 68, 0.5);
 
-  padding-top: 17px;
-  padding-left: 14px;
-  padding-bottom: 19px;
+  margin-top: 9px;
+  padding-top: 14px;
+  padding-left: 13px;
+  padding-bottom: 14px;
 }
 
 .modal input:hover {
@@ -1408,19 +1446,21 @@ input[type=number]::-webkit-outer-spin-button {
   width: 760px;
   box-sizing: border-box;
 
-  padding-top: 17px;
+  margin-top: 9px;
+  padding-top: 13px;
   padding-left: 14px;
-  padding-bottom: 88px;
+  padding-bottom: 67px;
 }
 
 .modal-close {
   position: absolute;
-  top: 82px;
-  right: 90px;
+  top: 79px;
+  right: 91px;
 
   width: 21px;
   height: 21px;
   background-image: url("../img/close-cross.svg");
+  background-color: transparent;
   background-repeat: no-repeat;
   opacity: 0.3;
 
